# ARSLM-

./: .gitignore  .pypirc  ARSLM.ipynb  ARSLM.py  MANIFEST.in  README.md  arslm_engine  arslm_fixes.py  merge_lora_to_arslm.py  microllm_core.py  profile.py  pyproject.toml  requirements.txt  setup.py  setup_arslm.sh  setup_termux.sh  streamlit_app.py  test.txt  test_arslm.py  test_arslm_final.py  vercel.json
.github/workflows/: publish.yml
apps/streamlit/: requirements.txt  streamlit_app.py
arslm/arslm/arslm/: loader.py
arslm/cli/: commands.py
arslm/core/: attention.py  recurrent.py
docs/: COMPLETE_FILES_CHECK  INSTALLATION_COMPLETE
lora/communation/: README.md
lora/ecole/: README.md
lora/gouvernement/: README.md
lora/pme/: README.md
lora/rh/: README.md
scripts/: migrate_repository  publish.sh
src/api/: main.py
src/arslm/: model.py
src/arslm/utils/: tokenizer.py
tests/unit/: test_model.py
